# image_viewer

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/hdrviewer/: HdrDecoder.java  MainActivity.java
build_aom_probe/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  libaom_srcs.gni  libaom_srcs.txt
build_aom_probe/config/: aom_config.asm  aom_config.asm.cmake  aom_config.c  aom_config.h  aom_config.h.cmake  aom_version.h
build_avif_probe/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  libavif.pc
build_avif_probe/contrib/: cmake_install.cmake
build_avif_probe/contrib/gdk-pixbuf/: cmake_install.cmake
scripts/: build_native_libs.ps1
